--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
         <item>Item 2S</item>
         <item>Item 2T</item>
     </string-array>
+    <string name="title_activity_project_submit">ProjectSubmitActivity</string>
 
 </resources>
 
