--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GADSProjectOne</string>
+    <string name="app_name">LEADERBOARD</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -11,51 +11,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="button">submitBtn</string>
 
-    <string-array name="tab_A">
-        <item>Item 1A</item>
-        <item>Item 1B</item>
-        <item>Item 1C</item>
-        <item>Item 1D</item>
-        <item>Item 1E</item>
-        <item>Item 1F</item>
-        <item>Item 1G</item>
-        <item>Item 1H</item>
-        <item>Item 1I</item>
-        <item>Item 1J</item>
-        <item>Item 1K</item>
-        <item>Item 1L</item>
-        <item>Item 1M</item>
-        <item>Item 1N</item>
-        <item>Item 1O</item>
-        <item>Item 1P</item>
-        <item>Item 1Q</item>
-        <item>Item 1R</item>
-        <item>Item 1S</item>
-        <item>Item 1T</item>
-    </string-array>
-
-    <string-array name="tab_B">
-        <item>Item 2A</item>
-        <item>Item 2B</item>
-        <item>Item 2C</item>
-        <item>Item 2D</item>
-        <item>Item 2E</item>
-        <item>Item 2F</item>
-        <item>Item 2G</item>
-        <item>Item 2H</item>
-        <item>Item 2I</item>
-        <item>Item 2J</item>
-        <item>Item 2K</item>
-        <item>Item 2L</item>
-        <item>Item 2M</item>
-        <item>Item 2N</item>
-        <item>Item 2O</item>
-        <item>Item 2P</item>
-        <item>Item 2Q</item>
-        <item>Item 2R</item>
-        <item>Item 2S</item>
-        <item>Item 2T</item>
-    </string-array>
     <string name="title_activity_project_submit">ProjectSubmitActivity</string>
 
 </resources>
